# imgui-plot

./: CMakeLists.txt  LICENSE  README.md
include/: imgui_plot.h
src/: imgui_plot.cpp
